lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:2: error: not found: value setPousseDesiree
setPousseDesiree(4)
^